--- a/pubman/pubman_presentation/src/main/webapp/viewItemOverview/citationGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItemOverview/citationGroup.jspf
@@ -43,5 +43,9 @@
 	</h:panelGroup>
 	<h:panelGroup layout="block" styleClass="third_area0_p6">
 		<h:outputText value="#{ViewItemFull.citationHtml}" escape="false"/>
+		<br/>
+		<h:outputLink id="lnkCitationURLPid" value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.version.pidWithoutPrefix}" rendered="#{ApplicationBean.handlesActivated and ViewItemFull.isStateReleased and ViewItemFull.pubItem.version.pid != null}">
+			<h:outputText value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.version.pidWithoutPrefix}"/>
+		</h:outputLink>	
 	</h:panelGroup>
 </h:panelGroup>
