PUBMAN-2601 fixed: Advanced search: set quotation marks for journals chosen by autosuggest
Former-commit-id: f41a6abfccfba2fa24d3bfcd95799720e21328f6

--- a/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
@@ -330,7 +330,7 @@ All rights reserved. Use is subject to license terms.
 					<!-- input for journal searches-->
 					<h:panelGroup styleClass="itemBlock" rendered="#{criterion.searchCriterion == 'JOURNAL'}">
 						<h:outputLabel id="lblJournal" styleClass="small_label label_keyword" value=" " />
-						<h:inputText id="journalSearchTerm" styleClass="double_txtInput sourceTitle journalSuggest" value="#{criterion.searchString}" />
+						<h:inputText id="journalSearchTerm" styleClass="double_txtInput sourceTitle journalSuggestQuotes" value="#{criterion.searchString}" />
 					</h:panelGroup>
 					
 					
