Former-commit-id: f8dc8845bed4199cb4fcdc03a6383fb594c54f7b

--- a/pubman/pubman_presentation/src/main/webapp/header/Header.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/Header.jspf
@@ -57,7 +57,7 @@
 		<h:outputLink id="lnkStartPage" title="#{tip.navigation_lblStartpage}" value="#{ApplicationBean.appContext}HomePage.jsp">
 			<h:graphicImage styleClass="tiny_marginLExcl headerLogo" style="border:none;" url="#{ApplicationBean.logoUrl}"></h:graphicImage>
 		</h:outputLink>
-		<h:panelGroup styleClass="tiny_marginLExcl quad_area0 themePark #{Header.serverLogo}">
+		<h:panelGroup styleClass="tiny_marginLExcl xDouble_area0 themePark #{Header.serverLogo}">
 		</h:panelGroup>
 
 		<%-- import search here--%>
