--- a/pubman/pubman_presentation/src/main/webapp/viewItemOverview/authorGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItemOverview/authorGroup.jspf
@@ -31,43 +31,49 @@
 <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
 <%@ taglib uri="http://richfaces.org/rich" prefix="rich" %> <%@ taglib uri="http://richfaces.org/a4j" prefix="a4j" %>
 
+<!-- Authors tile -->
 <h:panelGroup layout="block" styleClass="huge_area0 tile_category borderDarkBlue">
-	<!-- <div class="huge_area0">
-	images have to be in one line!
-		<img src="../images/header_left_corner_blue.png" class="left"/><img src="../images/header_middle_blue.png" class="center" /><img src="../images/header_right_corner_blue.png" class="right"/>
-	</div> -->
+	<!-- Authors tile title and icon -->
 	<h:panelGroup layout="block" styleClass="huge_area0_p6">
 		<h5 class="tile_title">
 			<img src="../resources/images/overviewPage/MPG_authors_31.png" class="big_imgBtn" align="right"/>
 			<h:outputText value="#{lbl.ViewItemOverview_lblMpgAuthorsSection}" />
 		</h5>
 	</h:panelGroup>
+	<!-- If no authors available show message -->
 	<h:panelGroup layout="block" styleClass="huge_area0_p6" rendered ="#{ViewItemFull.pubItem.mpgAuthors == null or empty(ViewItemFull.pubItem.mpgAuthors)}">
 		<h:outputText value="#{msg.ViewItemOverview_noMpgAuthorsAvailable}" />
 	</h:panelGroup>
+	<!-- Iterator for MPG-Authors -->
 	<h:panelGroup layout="block" styleClass="huge_area0_p0 nano" style="max-height:300px;">
 		<h:panelGroup layout="block" styleClass="free_area0_p6 content">
 			<a4j:repeat var="creator" value="#{ViewItemFull.pubItem.mpgAuthors}" rendered ="#{ViewItemFull.pubItem.mpgAuthors != null and !empty(ViewItemFull.pubItem.mpgAuthors)}" binding="#{ViewItemFull.creatorPersonsIterator}" rowKeyVar="index">
 				<div>
-					<!-- <h:graphicImage value="http://www.edqna.com/Action/User_Images/Short/shrey_13033_einstein-thumb.jpg" styleClass="large_imgBtn xTiny_marginRExcl" style="text-align:left;"/> -->
+					<!-- Hidden ID (used to replace image with CoNE image if available [see JavaScript]) -->
 					<h:outputText value="#{creator.person.identifier.id}" styleClass="mpgAuthorId noDisplay" rendered="#{creator.person.identifier != null && creator.person.identifier.id != null}"/>
+					<!-- Standard image for MPG-Authors with CoNE link -->
 					<h:outputLink value="#{creator.person.identifier.id}" rendered="#{creator.person.identifier != null && creator.person.identifier.id != null}">
 						<img src="../resources/images/overviewPage/MPG_authors_64.png" class="large_imgBtn xTiny_marginRExcl mpgAuthor" align="left" />
 					</h:outputLink>
+					<!-- Standard image for MPG-Authors without CoNE link -->
 					<h:panelGroup rendered="#{creator.person.identifier == null || creator.person.identifier.id == null}">
 						<img src="../resources/images/overviewPage/MPG_authors_64.png" class="large_imgBtn xTiny_marginRExcl mpgAuthor" align="left" />
 					</h:panelGroup>
+					<!-- Author textual information -->
 					<p class="xLarge_area0 xTiny_marginLExcl">
+						<!-- Author name with CoNE link -->
 						<h:panelGroup styleClass="author_name" rendered="#{creator.person.identifier != null && creator.person.identifier.id != null}">
 							<h:outputLink value="#{creator.person.identifier.id}">
 								<h:outputText value="#{creator.person.familyName}" rendered="#{creator.type == 'PERSON' and creator.person.familyName != null}"/>,&nbsp;
 								<h:outputText value="#{creator.person.givenName}" rendered="#{creator.type == 'PERSON' and creator.person.givenName != null}"/>
 							</h:outputLink>
 						</h:panelGroup>
+						<!-- Author name without CoNE link -->
 						<h:panelGroup styleClass="author_name" rendered="#{creator.person.identifier == null || creator.person.identifier.id == null}">
 							<h:outputText value="#{creator.person.familyName}" rendered="#{creator.type == 'PERSON' and creator.person.familyName != null}"/>,&nbsp;
 							<h:outputText value="#{creator.person.givenName}" rendered="#{creator.type == 'PERSON' and creator.person.givenName != null}"/>
 						</h:panelGroup>
+						<!-- Iterator for the authors organizations (linked in the publication) -->
 						<h:panelGroup styleClass="author_organization">
 							<a4j:repeat var="creatorOrganization" value="#{creator.person.organizations}" rendered ="#{ViewItemFull.pubItem.metadata.creators != null}" rowKeyVar="index">
 								</br><h:outputText value="#{creatorOrganization.name};" rendered="#{creator.type == 'PERSON' and creatorOrganization.name != null}"/>
