--- a/pubman/pubman_presentation/src/main/webapp/viewItemOverview/externalResourceGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItemOverview/externalResourceGroup.jspf
@@ -31,48 +31,40 @@
 <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
 <%@ taglib uri="http://richfaces.org/rich" prefix="rich" %> <%@ taglib uri="http://richfaces.org/a4j" prefix="a4j" %>
 
+<!-- External resource tile -->
 <h:panelGroup layout="block" styleClass="huge_area0 tile_category borderRed">
-	<!-- <div class="huge_area0">
-	images have to be in one line!
-		<img src="../images/header_left_corner_red.png" class="left"/><img src="../images/header_middle_red.png" class="center" /><img src="../images/header_right_corner_red.png" class="right"/>
-	</div> -->
+	<!-- External resource title and icon -->
 	<h:panelGroup layout="block" styleClass="huge_area0_p6">
 		<h5 class="tile_title">
 			<img src="../resources/images/overviewPage/external_Ressources_31.png" class="big_imgBtn" align="right"/>
 			<h:outputText value="#{lbl.ViewItemOverview_lblExternalResourceSection}" />
 		</h5>
 	</h:panelGroup>
+	<!-- If no external resources are available show message -->
 	<h:panelGroup layout="block" styleClass="huge_area0_p6" rendered ="#{ViewItemFull.pubItem.locatorBeanList == null or empty(ViewItemFull.pubItem.locatorBeanList)}">
 		<h:outputText value="#{msg.ViewItemOverview_noExternalResourcesAvailable}" />
 	</h:panelGroup>
+	<!-- Iterator for external resources -->
 	<h:panelGroup layout="block" styleClass="huge_area0_p0 nano" style="max-height:300px;">
 		<h:panelGroup layout="block" styleClass="free_area0_p6 content">
 			<a4j:repeat var="file" value="#{ViewItemFull.pubItem.locatorBeanList}" rendered ="#{ViewItemFull.pubItem.locatorBeanList != null and !empty(ViewItemFull.pubItem.locatorBeanList)}" rowKeyVar="index">
 				<div>
+					<!-- External resource icon -->
 					<img src="../resources/images/overviewPage/external_Ressources_31.png" class="min_imgBtn xxTiny_marginRExcl xTiny_marginBExcl" align="left"/>
+					<!-- Textual description and link to external resource -->
 					<p class="double_area0">
+						<!-- Link to the external resource -->
 						<h:outputLink id="lnkLocator" target="_blank" value="#{file.locator}">
 							<h:outputText value="#{file.fileName}" title="#{file.fileName}" rendered="#{!ViewItemFull.isStateWithdrawn}"/>
 						</h:outputLink>
-						<h:outputText value="#{file.fileName}" title="#{file.fileName}" rendered="#{ViewItemFull.isStateWithdrawn}"/>
-						<br/>
-						<h:outputText value=" (#{file.contentCategory})" rendered="#{!ViewItemFull.isStateWithdrawn}"/>
+						<!-- Text if publication is withdrawn -->
 						<h:outputText value="#{lbl.ViewItemFull_lblNoAccess}" rendered="#{ViewItemFull.isStateWithdrawn}"/>
+						<br/>
+						<!-- Content category -->
+						<h:outputText value=" (#{file.contentCategory})" rendered="#{!ViewItemFull.isStateWithdrawn}"/>
 					</p>
 				</div>
 			</a4j:repeat>
 		</h:panelGroup>
 	</h:panelGroup>
-	<!-- 
-	<h:panelGroup layout="block" styleClass="huge_area0_p6">
-		<p>
-			<img src="http://www.edqna.com/Action/User_Images/Short/shrey_13033_einstein-thumb.jpg" class="large_imgBtn xTiny_marginRExcl" align="left"/>
-			"Zwei Dinge sind unendlich: Das Universum und die Dummheit der Menschen. Aber beim Universum bin ich mir noch nicht so sicher." - Albert Einstein
-		</p>
-		<div><img src="http://www.edqna.com/Action/User_Images/Short/shrey_13033_einstein-thumb.jpg" class="free_area0 large_imgBtn" align="left"/>
-		<p class="xLarge_area0 xTiny_marginLExcl">
-			"Zwei Dinge sind unendlich: Das Universum und die Dummheit der Menschen. Aber beim Universum bin ich mir noch nicht so sicher." - Albert Einstein
-		</p></div>
-	</h:panelGroup>
-	-->
 </h:panelGroup>
