Resolved [PUBMAN-2583] - Add item handle to the view item page
Former-commit-id: c5386ae02cb8ff3414bffdaa5a5aa30692c5c90a

--- a/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
@@ -46,7 +46,17 @@
 				<h:outputText value="#{lbl.ViewItemFull_lblCiteItemAs}" /><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputLink id="lnkCitationURLPid" value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.version.pidWithoutPrefix}" rendered="#{ApplicationBean.handlesActivated and ViewItemFull.isStateReleased and ViewItemFull.pubItem.version.pid != null}">
+				<h:outputLink id="lnkCitationURLItemPid" value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.objectPidWithoutPrefix}" title="#{tip.ViewItemFull_lblCiteItemAs}" rendered="#{ApplicationBean.handlesActivated and ViewItemFull.isStateReleased and ViewItemFull.pubItem.objectPidWithoutPrefix != null}">
+					<h:outputText value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.objectPidWithoutPrefix}"/>
+				</h:outputLink>
+				<h:outputText value="#{lbl.lbl_noEntry}" rendered="#{!ViewItemFull.isStateReleased or (ApplicationBean.handlesActivated and ViewItemFull.pubItem.objectPidWithoutPrefix == null)}"/>
+			</span>	
+			<b class="xLarge_area0_p8 endline labelLine clear">
+				<h:outputText value="#{lbl.ViewItemFull_lblCiteItemVersionAs}" /><span class="noDisplay">: </span>
+			</b>
+			<span class="xHuge_area0 xTiny_marginLExcl endline">
+				
+				<h:outputLink id="lnkCitationURLVersionPid" value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.version.pidWithoutPrefix}" title="#{tip.ViewItemFull_lblCiteItemVersionAs}" rendered="#{ApplicationBean.handlesActivated and ViewItemFull.isStateReleased and ViewItemFull.pubItem.version.pid != null}">
 					<h:outputText value="#{ViewItemFull.resolveHandleService}#{ViewItemFull.pubItem.version.pidWithoutPrefix}"/>
 				</h:outputLink>	
 				
@@ -54,7 +64,7 @@
 					<h:outputText value="#{ViewItemFull.citationURL}"/>
 				</h:outputLink>	
 				
-			<h:outputText value="#{lbl.lbl_noEntry}" rendered="#{!ViewItemFull.isStateReleased or (ApplicationBean.handlesActivated and ViewItemFull.pubItem.version.pid == null)}"/>
+				<h:outputText value="#{lbl.lbl_noEntry}" rendered="#{!ViewItemFull.isStateReleased or (ApplicationBean.handlesActivated and ViewItemFull.pubItem.version.pid == null)}"/>
 			</span>
 			<h:panelGroup layout="block" styleClass="large_area0_p8 lineToolSection socialBookmarking" rendered="#{ViewItemFull.isStateReleased}">
 				
